# plutus-optimization-example

./: .gitignore  .gitmodules  README.md  cabal.project  hie.yaml  plutus-optimization.cabal  protocol-parameters.json  run.sh  run_optimize.sh  tx.raw  tx.signed  tx_optimized.raw  tx_optimized.signed
plutus/: datum.json
plutus-script/: normal_script.plutus  optimized_script.plutus
src/: CustomContexts.hs  Main.hs  OnChain.hs
